# event-driven-alpha

./: .gitignore  PEAD.py  README.md  pyproject.toml  requirements.txt
docs/: pead_factor_notes.md
outputs/: pead_upgrade_summary.md
scripts/: run_pead.py
src/event_alpha/: __init__.py  pead_factor.py
tests/: test_pead_factor.py
