[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "event-driven-alpha"
version = "0.1.0"
description = "Event-driven alpha research with a PEAD factor built from public Yahoo Finance data."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2.40",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]
